--- a/src/assets/css/cmps/upper-filter.scss
+++ b/src/assets/css/cmps/upper-filter.scss
@@ -31,9 +31,13 @@
     }
   
     .logo {
-      font-size: 24px;
-      font-weight: bold;
-      color: #333;
+      width: 100px;
+      height: auto;
+      img {
+        width: 100%;  // Makes the image take the full width of the parent (.logo)
+        height: 100%; // Ensures it scales with the parent
+        object-fit: contain; // Keeps aspect ratio inside the box
+      }
     }
   
     .categories {
