--- a/src/assets/css/cmps/avatar.scss
+++ b/src/assets/css/cmps/avatar.scss
@@ -1,4 +1,6 @@
 .avatar {
+    width: 35px; /* Set the size of the avatar */
+    height: auto; /* Set the size of the avatar */
     border-radius: 50%; /* Make the div circular */
     overflow: hidden; /* Ensure the image doesn't overflow the container */
     display: flex;
