Mobile Filter: add search button for mobile

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -12,6 +12,7 @@
 
 /* Components */
 @use "./cmps/upper-filter.scss";
+@use "./cmps/mobile-filter.scss";
 @use "./cmps/avatar.scss";
 @use "./cmps/stay-list.scss";
 @use "./cmps/stay-preview.scss";
