--- a/src/assets/css/basics/base.scss
+++ b/src/assets/css/basics/base.scss
@@ -1,6 +1,13 @@
 html {
   font-family: "Nunito", sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  // line-height: 1.5;
+  font-weight: 600;
   letter-spacing: 0.01em;
 }
+
+// @font-face {
+//   font-family: "Airbnb Cereal";
+//   src: url("../../fonts//AirbnbCereal.woff2") format("woff2");
+//   font-weight: 500;
+//   font-style: normal;
+// }
