Add middle filter component with proper css

--- a/src/assets/css/cmps/stay-preview.scss
+++ b/src/assets/css/cmps/stay-preview.scss
@@ -27,7 +27,6 @@
 .stay-card-title-row {
   display: flex;
   justify-content: space-between;
-  // font-weight: 600;
 }
 
 .stay-card-distance,
@@ -44,58 +43,6 @@
   font-weight: 100;
   color: black;
   margin-left: 2px;
-}
-
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: white;
-  border: none;
-  border-radius: 50%;
-  width: 28px;
-  height: 28px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  opacity: 0;
-  transition: opacity 0.2s ease;
-  z-index: 2;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-}
-
-.stay-card-img-container:hover .carousel-btn {
-  opacity: 1;
-}
-
-.carousel-btn.left {
-  left: 10px;
-}
-
-.carousel-btn.right {
-  right: 10px;
-}
-
-.carousel-dots {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 6px;
-  z-index: 1;
-}
-
-.dot {
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-.dot.active {
-  background-color: white;
 }
 
 .carousel-window {
@@ -139,6 +86,7 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 
+.stay-card-img-container:hover .carousel-btn,
 .carousel-window:hover .carousel-btn {
   opacity: 1;
 }
@@ -170,4 +118,26 @@
 
 .dot.active {
   background-color: white;
+}
+
+.like-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.like-btn:hover {
+  font-size: 30px;
+}
+
+.like-btn svg {
+  color: white;
+  font-size: 25px;
+  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.6));
 }
