--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -19,3 +19,4 @@
 @use "./cmps/stay-filter.scss";
 @use "./cmps/app-header.scss";
 @use "./cmps/app-footer.scss";
+@use "./cmps/middle-filter.scss";
