Added small filter component with its css

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -20,3 +20,4 @@
 @use "./cmps/app-header.scss";
 @use "./cmps/app-footer.scss";
 @use "./cmps/middle-filter.scss";
+@use "./cmps/small-filter.scss";
