--- a/src/assets/css/cmps/middle-filter.scss
+++ b/src/assets/css/cmps/middle-filter.scss
@@ -8,7 +8,7 @@
   grid-template-columns: repeat(4, 1fr) auto;
   align-items: center;
   gap: 10px;
-  padding: 12px 20px;
+  padding: 7px;
   border: 1px solid #ddd;
   border-radius: 999px;
   background: white;
@@ -25,8 +25,8 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 16px;
-  border-right: 1px solid #ccc;
-  height: 100%;
+  border-right: 1px solid gray;
+  height: 70%;
 }
 
 .section:last-of-type {
@@ -35,17 +35,20 @@
 
 .section span {
   color: gray;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
 }
 
 .search-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #ff385c;
   color: white;
   border: none;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   font-size: 16px;
   cursor: pointer;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
