--- a/src/assets/css/cmps/modal.scss
+++ b/src/assets/css/cmps/modal.scss
@@ -15,3 +15,26 @@
   box-sizing: border-box;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Optional: Add soft shadow */
 }
+
+
+// Scrollable (childrens - TODO refactoring)
+.modal-scrollable-list {
+  overflow-y: auto;
+  max-height: 400px;
+  padding-right: 5px;
+}
+
+.destination-item {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #eee;
+}
+
+.destination-item:hover {
+  background-color: #f7f7f7;
+}
+
+.destination-item.selected {
+  background-color: #ff385c;
+  color: white;
+}
