modals: bug fixes

--- a/src/assets/css/cmps/search-location.scss
+++ b/src/assets/css/cmps/search-location.scss
@@ -4,6 +4,7 @@
     cursor: pointer;
     padding-left: 18px;
     padding-top: 8px;
+    margin: 10px 10px 0px 0px;
     border-radius: 12px;
     transition: background 0.2s;
   }
