Modals: add few customization for the calendar

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -23,7 +23,7 @@
 @use "./cmps/small-filter.scss";
 @use "./cmps/modal.scss";
 @use "./cmps/search-location.scss";
-
+@use "./cmps/calendar.scss";
 
 /* Fonts */
 @font-face {
