Modals: add Date toggle inside date modal

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -24,6 +24,8 @@
 @use "./cmps/modal.scss";
 @use "./cmps/search-location.scss";
 @use "./cmps/calendar.scss";
+@use "./cmps/date-toggle-group.scss";
+
 
 /* Fonts */
 @font-face {
