--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -25,6 +25,7 @@
 @use "./cmps/search-location.scss";
 @use "./cmps/calendar.scss";
 @use "./cmps/date-toggle-group.scss";
+@use "./cmps/date-flexibility-toggle.scss";
 
 
 /* Fonts */
