Modals: add Guest picker

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -26,6 +26,8 @@
 @use "./cmps/calendar.scss";
 @use "./cmps/date-toggle-group.scss";
 @use "./cmps/date-flexibility-toggle.scss";
+@use "./cmps/guest-picker.scss";
+
 
 
 /* Fonts */
