implement StayDetails component with photo grid and host info section. Added host info section with avatar, name, superhost badge and hosting duration. Styled middle section with property info (location, guests, reviews)

--- a/src/assets/css/cmps/middle-filter.scss
+++ b/src/assets/css/cmps/middle-filter.scss
@@ -5,8 +5,8 @@
 
 .search-box {
   display: grid;
-  grid-template-columns: repeat(4, 1fr) auto;
-  align-items: center;
+  grid-template-columns: 2fr 1fr 1fr 2fr auto;
+  align-items: stretch;
   gap: 10px;
   padding: 7px;
   border: 1px solid #ddd;
@@ -26,11 +26,7 @@
   justify-content: center;
   padding: 0 16px;
   border-right: 1px solid gray;
-  height: 70%;
-}
-
-.section:last-of-type {
-  border-right: none;
+  height: 100%;
 }
 
 .section span {
