--- a/src/assets/css/cmps/label-scroller-bar.scss
+++ b/src/assets/css/cmps/label-scroller-bar.scss
@@ -5,11 +5,66 @@
     align-items: center;
   }
 
+  .labels-scroller-wrapper {
+    &.no-arrows {
+      .carousel-item-container {
+        padding: 0; 
+      }
+  
+      .carousel-wrapper {
+        padding: 0; 
+      }
+    }
+  }
+
   .carousel-item-container {
-    display: flex;
+    display: grid;
     justify-content: center;
-    margin: 0 12px; 
+    padding:0 8px; 
     box-sizing: border-box;
+    //gap: 20px;
+    // flex: 0 0 auto;
+    // width: auto;
+    // min-width: 96px;
+    // max-width: 112px;
+    // padding: 0 8px;
+    // box-sizing: border-box;
+  }
+
+
+  .react-multiple-carousel__arrow {
+    background: transparent;
+    border:1px solid #ccc;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    z-index: 10;
+    box-shadow:  0 2px 6px rgba(0, 0, 0, 0.12);
+    transition: box-shadow 0.2s ease;
+  
+  
+    &::before {
+      color: black;         
+      font-size: 16px;
+    }
+    &:hover {
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15); // ✅ soft shadow on hover
+      border-color: #ccc;
+      background-color: #fff; // optional: keeps it white
+    }
+  }
+
+  .react-multiple-carousel__arrow--left {
+    left: 0;
+  }
+
+  .react-multiple-carousel__arrow--right {
+      right: 0;
+  }
+
+  .carousel-wrapper {
+    position: relative;
+    padding: 0 24px; 
   }
 
   .carousel-item {
@@ -17,14 +72,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding: 12px;
-    max-width: 90px;
     box-sizing: border-box;
     text-align: center;
     color: #717171; // default gray
-    cursor: pointer;
     transition: color 0.2s ease;
-    width: 96px;
+    min-width:96px;
+    width: max-content;
+    
 
     img {
       width: 30px;
@@ -40,18 +94,11 @@
       font-family: 'Urbanist', sans-serif;
       color: #717171;
       margin: 0;
-      //margin-top: 6px;
       position: relative;
-      //margin-bottom: 10px;
       text-align: center;
       display: inline-block;
-
-      // ✨ This is the key combo:
       white-space: nowrap;
-      //overflow: hidden;
-      //text-overflow: clip;
-
-      //max-width: 100%;
+      
 
       &::after {
         content: "";
@@ -79,7 +126,6 @@
       }
     }
 
-    // Active (also underline)
     &.active {
       p {
         color: #000;
@@ -96,3 +142,4 @@
     }
   }
 }
+
