--- a/src/assets/css/cmps/label-scroller-bar.scss
+++ b/src/assets/css/cmps/label-scroller-bar.scss
@@ -4,6 +4,11 @@
     display: flex;
     align-items: center;
   }
+  
+  ul.react-multi-carousel-track {
+    display: flex;
+    gap: 15px;
+  }
 
   .labels-scroller-wrapper {
     &.no-arrows {
@@ -20,15 +25,11 @@
   .carousel-item-container {
     display: grid;
     justify-content: center;
-    padding:0 8px; 
     box-sizing: border-box;
-    //gap: 20px;
-    // flex: 0 0 auto;
-    // width: auto;
-    // min-width: 96px;
-    // max-width: 112px;
-    // padding: 0 8px;
-    // box-sizing: border-box;
+    min-width: 96px;
+    max-width: 112px;
+    width: 100%;
+    padding: 0 4px;
   }
 
 
@@ -48,9 +49,9 @@
       font-size: 16px;
     }
     &:hover {
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15); // ✅ soft shadow on hover
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15); 
       border-color: #ccc;
-      background-color: #fff; // optional: keeps it white
+      background-color: #fff; 
     }
   }
 
@@ -76,8 +77,9 @@
     text-align: center;
     color: #717171; // default gray
     transition: color 0.2s ease;
-    min-width:96px;
     width: max-content;
+    padding: 6px 8px;
+    
     
 
     img {
