changed orderCard - calender position

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -27,6 +27,8 @@
 @use "./cmps/date-toggle-group.scss";
 @use "./cmps/date-flexibility-toggle.scss";
 @use "./cmps/guest-picker.scss";
+@use "./cmps/label-scroller-bar.scss";
+@use "./cmps/order-card.scss";
 
 
 
