add backoffice page

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -27,13 +27,12 @@
 @use "./cmps/date-toggle-group.scss";
 @use "./cmps/date-flexibility-toggle.scss";
 @use "./cmps/guest-picker.scss";
-
-
+@use "./cmps/main-menu.scss";
 
 /* Fonts */
 @font-face {
-    font-family: 'AirbnbCereal';
-    src: url('/src/assets/fonts/AirbnbCereal.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: "AirbnbCereal";
+  src: url("/src/assets/fonts/AirbnbCereal.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
