--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -18,7 +18,7 @@
 @use "./cmps/stay-list.scss";
 @use "./cmps/stay-preview.scss";
 @use "./cmps/stay-filter.scss";
-@use "./cmps/app-header.scss";
+// @use "./cmps/app-header.scss";
 @use "./cmps/app-footer.scss";
 @use "./cmps/middle-filter.scss";
 @use "./cmps/small-filter.scss";
@@ -31,6 +31,8 @@
 @use "./cmps/main-menu.scss";
 @use "./cmps/side-menu.scss";
 @use "./cmps/booking-confirmation-modal.scss";
+@use "./cmps/user-menu.scss";
+@use "./cmps/profile-button.scss";
 
 @use "./cmps/label-scroller-bar.scss";
 @use "./cmps/order-card.scss";
